<resources>
    <string name="app_name">Android Test Mobile</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="Prompt_User">  User</string>
    <string name="Prompt_Password">  Password</string>
    <string name="Prompt_MostrarPassword">Mostrar Contraseña</string>
    <string name="Prompt_IniciarSession">Iniciar Session</string>
    <string name="Prompt_addContraseña">Ingrese una contraseña</string>
    <string name="Prompt_addUsuario">Ingrese su usuario</string>
    <string name="Prompt_addImage">Imagen Marca</string>
    <string name="title_activity_login__agent_">Sign in Agent</string>
    <string name="Toolbar_title_Activity_Agent">Recargas</string>
</resources>
