<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:background="@color/Colorbackground_General"
    android:orientation="vertical"

    tools:context="mariosdevelop.androidtestmobile.Controllers.LoginActivity">


    <android.support.v7.widget.Toolbar
        android:id="@+id/ToolbarSeccion"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        style="@style/Toolbar_Theme"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/Toolbar_title_Activity_Agent"
                    android:textColor="@color/colorAccent"
                    android:textSize="22dp"
                    />


            </LinearLayout>


            <!--  <LinearLayout
                  android:layout_width="0dp"
                  android:layout_weight="1"
                  android:layout_height="match_parent"
                  android:paddingRight="15dp"
                  android:visibility="invisible"
                  android:gravity="right|center_vertical">

                  <ImageView
                      android:layout_width="20dp"
                      android:layout_height="20dp"
                      android:src="@drawable/ic_settings"
                      />

              </LinearLayout>

              -->


        </LinearLayout>




    </android.support.v7.widget.Toolbar>



    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <!-- <android.support.v7.widget.Toolbar
         android:id="@+id/my_awesome_toolbar"
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
         style="@style/Theme.MyTheme"
         android:minHeight="?attr/actionBarSize"
         />
         -->

    <ScrollView
        android:id="@+id/login_form"
        android:layout_margin="20dp"

        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal">

                <ImageView
                    android:id="@+id/icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_logo_tuenti"/>

            </LinearLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/User"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Prompt_User"
                    android:inputType="textAutoComplete"
                    android:textColorHint="#ffffff"
                    android:textColor="@color/colorAccent"
                    android:maxLines="1"
                    android:drawableLeft="@drawable/ic_user"
                    android:drawablePadding="10dp"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Prompt_Password"
                    android:imeActionId="6"
                    android:drawableLeft="@drawable/ic_pass"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:textColorHint="#ffffff"
                    android:textColor="@color/colorAccent"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:drawablePadding="10dp"
                    android:layout_marginBottom="20dp"

                    />

            </android.support.design.widget.TextInputLayout>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Prompt_MostrarPassword"
                android:textColor="@color/colorAccent"
                android:layout_marginBottom="30dp"/>

            <Button
                android:id="@+id/email_sign_in_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:background="@drawable/base_buttons"
                android:layout_marginTop="16dp"
                android:text="@string/Prompt_IniciarSession"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
